unpackaged/main/default/objects/Required_Documents__c/Required_Documents__c.object-meta.xml
<CustomObject>
    <label>Required Document</label>
    <nameField>
        <label>Required Documents Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Required Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>