unpackaged/main/default/objects/Required_Documents__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Required Documents (Business)</relationshipLabel>
    <relationshipName>Required_Documents2</relationshipName>
    <type>Lookup</type>
</CustomField>