unpackaged/main/default/objects/Required_Documents__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Required Documents</relationshipLabel>
    <relationshipName>Required_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>