unpackaged/main/default/objects/Required_Documents__c/fields/DocuSign_Envelope__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DocuSign Envelope</label>
    <referenceTo>dfsle__Envelope__c</referenceTo>
    <relationshipLabel>Required Documents</relationshipLabel>
    <relationshipName>Required_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>