unpackaged/main/default/objects/Required_Documents__c/fields/EnvelopeId__c.field-meta.xml
<CustomField>
    <fullName>EnvelopeId__c</fullName>
    <formula>DocuSign_Envelope__r.dfsle__DocuSignId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Envelope Id</label>
    <type>Text</type>
</CustomField>