unpackaged/main/default/objects/Required_Documents__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Required Documents</relationshipLabel>
    <relationshipName>Required_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>