unpackaged/main/default/objects/Required_Documents__c/fields/Flow_Interview_Id__c.field-meta.xml
<CustomField>
    <fullName>Flow_Interview_Id__c</fullName>
    <label>Flow Interview Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>