unpackaged/main/default/objects/Required_Documents__c/fields/Pending__c.field-meta.xml
<CustomField>
    <fullName>Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending?</label>
    <type>Checkbox</type>
</CustomField>