unpackaged/main/default/objects/Required_Documents__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Required Documents (Person)</relationshipLabel>
    <relationshipName>Required_Documents3</relationshipName>
    <type>Lookup</type>
</CustomField>