unpackaged/main/default/objects/Required_Documents__c/fields/Retirement_Plan__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retirement Plan</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Required Documents (Retirement Plan)</relationshipLabel>
    <relationshipName>Required_Documents4</relationshipName>
    <type>Lookup</type>
</CustomField>