unpackaged/main/default/objects/Required_Documents__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Envelope Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>