unpackaged/main/default/objects/Required_Documents__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Required Documents (Trust)</relationshipLabel>
    <relationshipName>Required_Documents1</relationshipName>
    <type>Lookup</type>
</CustomField>