unpackaged/main/default/objects/Required_Documents__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Household__c</columns>
    <columns>DocuSign_Envelope__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>